	 the 0.6.1.1 changes to HEAD).
20031004 timer.c: remove duplicated Win32 code (Marek)
20031004 tape.c, tape.h: make tape and tape_playing static.
20031004 tape.c, ui/ui.h, ui/gtk: add very simple statusbar showing tape
	 status.
20031004 ui/gtk: merge gtkdisplay.h, gtkkeyboard.h and gtkui.h into
	 gtkinternals.h.
20031004 specplus3.c, ui/ui.h, ui/gtk: add disk motor indicator to the
	 status bar.
20031005 specplus3.c, tape.c, ui/ui.h, ui/gtk: better encapsulation of the
	 status bar routines.
20031005 machine.c, ui/ui.h, ui/gtk/statusbar.c: add a 'not available'
	 state for the disk statusbar item.
20031005 dck.c, machine.c, rzx.c, specplus3.c, trdos.c, ui/ui.h,
	 ui/gtk/gtkui.c: better encapsulation of the menu activation
	 routines.
20031005 widget/menu.c, widget/widget.c: use the new statusbar and menu
	 activation routines.
20031006 specplus3.c: if emulating a +2A, don't update the status of the
	 disk motor when the +2A/+3 memory port is written to.
20031006 machine.c: remove duplicated code from machine_select_machine()
20031006 settings.pl: change config file name to 'fuse.cfg' on Win32
20031006 settings.dat, ui/options.dat, ui/gtk/confirm.c: add option to
	 disable the 'confirm' dialogs.
20031006 debugger/command.c, debugger/commandy.y: better error recovery
20031007 ui/fb/fbdisplay.c, ui/fb/fbkeyboard.c: fix up framebuffer UI
	 (Darren).
20031007 Real joystick support (Darren/Fred)
20031008 ui/ggi/ggikeyboard.c: #include "fuse.h" (thanks, cmdzod)
20031008 settings.pl: don't segfault if there are empty string entries
	 in the config file.
20031008 fuse.c, utils.c: partial cleanup of the startup code: there is
	 now only one place at which each type of file is opened.
20031008 configure.in: correct joystick code detection if libjsw not
	 present.
20031008 ui/svga/svgakeyboard.c: F3 should open all files, not just
	 snapshots.
20031009 fuse.c: make the --record option record rather than playback.