@@ -17,6 +17,7 @@ RZX Options
 Checkbox, (C)ompress RZX data, rzx_compression, KEYBOARD_c
 Checkbox, C(o)mpetition mode, competition_mode, KEYBOARD_o
 Entry, Co(m)petition code, competition_code, KEYBOARD_m, 8,
+Checkbox, Always (e)mbed snapshot, embed_snapshot, KEYBOARD_e
 
 sound
 Sound Options
